# rocr_debug_agent

./: .clang-format  CMakeLists.txt  CODEOWNERS  LICENSE.txt  README.md
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: issue_report.yml
cmake/modules/: FindLibDw.cmake  FindLibElf.cmake  FindROCR.cmake
docs/: conf.py  index.rst  installation.rst
docs/conceptual/: user-guide.rst
docs/install/: installation.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
src/: AgentLogging.cpp  AgentUtils.cpp  CMakeLists.txt  HSADebugAgent.cpp  HSADebugAgentGDBProbes.d  HSADebugAgentGPUEventTrigger.cpp  HSADebugInfo.cpp  HSAHandleDebugTrapSignal.cpp  HSAHandleLinuxSignals.cpp  HSAHandleMemoryFault.cpp  HSAHandleQueueError.cpp  HSAIntercept.cpp  HSATrapHandler_s_gfx900.s  HSATrapHandler_s_gfx906.s  HSATrapHandler_s_gfx9xx.s  README.md  code_object.cpp  code_object.h  create_debug_trap_co_hex_file.sh  debug.h  debug_agent.cpp  exportmap  logging.cpp  logging.h
src/Include/: AgentLogging.h  AgentUtils.h  HSADebugAgent.h  HSADebugAgentGDBInterface.h  HSADebugInfo.h  HSAHandleDebugTrapSignal.h  HSAHandleLinuxSignals.h  HSAHandleMemoryFault.h  HSAHandleQueueError.h  HSAIntercept.h
test/: CMakeLists.txt  README.md  debug_agent_test.cpp  rocr_debug_agent_test.cc  run-test.py  run_test.py  util.cc  util.h  vector_add.cc  vector_add_assert_trap.cpp  vector_add_debug_trap.cc  vector_add_debug_trap_kernel.cl  vector_add_memory_fault.cc  vector_add_memory_fault.cpp  vector_add_memory_fault_kernel.cl  vector_add_normal.cc  vector_add_normal.cpp  vector_add_normal_kernel.cl
test/Include/: util.h  vector_add_debug_trap.h  vector_add_memory_fault.h  vector_add_normal.h
